examples/test/testpolicy11890.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11890
  namespace: namespace431
spec:
  podSelector:
    matchLabels:
      key4: value40
      key22: value44
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key11: value41
          key26: value17
      podSelector:
        matchLabels:
          key6: value37
          key24: value14
